2005-12-26 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: Added a check for empty database in couple of places.

2005-12-26 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Replaced the referenced fieldnames of the global database with absolute names, thus improving readability of the code and  speed of the program. Referencing was useful only while the absolute names were in experimental phase.
	- Fixed a typo.

2005-12-23 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Added back the ability to compute psd, compute 'accumulative displacement' and overlay the results for multiple files on a common plot. Enabled 'plot' button.
	- Added checkbox to do frequency-domain analysis of the data selected in time-domain by drawing a box.
	* lt_analysis_gui.fig: Same +
	- Moved 'Add FS data' button into master database management panel.

2005-12-22 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: Miscellaneous bug/typo fixes.

2005-12-22 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
	- Upgraded the whole program to exploit the new 'matrix output' feature of load_laser_tracking.
	- corrected the positioning of overlayed magnets, so that they are reliably visible
	- added 7th field in the global master database: 'drift' and removed the field: 'experType'
	- Added  ability to select 'drift section' and then remove that drift from rest of the data
	- Improved interface for drawing and dragging box, now using radios and buttonDownFcns
	- Changed the 'cut' behavior to 'remove inside box' instead of 'remove outside box'
	- Now in the 3D plot the data inside box has different color than data outside box.
	- Several miscellaneous fixes of typos and bugs.
	* lt_anlaysis_gui.fig: same

2005-12-20 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Added  3d plotting ability
	- Added ability to overlay channel 8 (wire from magnet DAC) onto position traces.